Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    CONST
    DIVIDE
    FUNCTION
    NOT
    PROCEDURE
    REPEAT
    UNTIL

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> PROGRAM ID SEMICOLON Bloco DOT
Rule 2     Bloco -> VarSec Exec
Rule 3     VarSec -> VAR ListaDeclaracaoVars
Rule 4     VarSec -> empty
Rule 5     ListaDeclaracaoVars -> DeclVar ListaDeclaracaoVars
Rule 6     ListaDeclaracaoVars -> empty
Rule 7     DeclVar -> ListaVariaveis COLON Tipo SEMICOLON
Rule 8     Variavel -> ID LBRACKET Expr RBRACKET
Rule 9     Variavel -> ID
Rule 10    ListaVariaveis -> Variavel ListaVariaveisTail
Rule 11    ListaVariaveisTail -> COMMA Variavel ListaVariaveisTail
Rule 12    ListaVariaveisTail -> empty
Rule 13    Tipo -> INTEGER
Rule 14    Tipo -> REAL
Rule 15    Tipo -> CHAR_TYPE
Rule 16    Tipo -> BOOLEAN
Rule 17    Tipo -> STRING_TYPE
Rule 18    Tipo -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF Tipo
Rule 19    Exec -> BEGIN ListaInstrucao END
Rule 20    ListaInstrucao -> Instrucao SEMICOLON ListaInstrucao
Rule 21    ListaInstrucao -> Instrucao
Rule 22    ListaInstrucao -> empty
Rule 23    Instrucao -> IF Expr THEN Instrucao
Rule 24    Instrucao -> IF Expr THEN Instrucao ELSE Instrucao
Rule 25    Instrucao -> Loop
Rule 26    Instrucao -> Atr
Rule 27    Instrucao -> Exec
Rule 28    Instrucao -> WRITE LPAREN ListaExpr RPAREN
Rule 29    Instrucao -> WRITELN LPAREN ListaExpr RPAREN
Rule 30    Instrucao -> WRITELN
Rule 31    Instrucao -> READ LPAREN ListaVariaveis RPAREN
Rule 32    Instrucao -> READLN LPAREN ListaVariaveis RPAREN
Rule 33    Loop -> WHILE Expr DO Instrucao
Rule 34    Loop -> FOR ID ASSIGN Expr TO Expr DO Instrucao
Rule 35    Loop -> FOR ID ASSIGN Expr DOWNTO Expr DO Instrucao
Rule 36    Atr -> ID ASSIGN Expr
Rule 37    Atr -> ID LBRACKET Expr RBRACKET ASSIGN Expr
Rule 38    Expr -> Expr OR TermoAnd
Rule 39    Expr -> TermoAnd
Rule 40    ListaExpr -> Expr ListaExprTail
Rule 41    ListaExprTail -> COMMA Expr ListaExprTail
Rule 42    ListaExprTail -> empty
Rule 43    TermoAnd -> TermoAnd AND TermoIgualdade
Rule 44    TermoAnd -> TermoIgualdade
Rule 45    TermoIgualdade -> TermoIgualdade EQUAL TermoRelacional
Rule 46    TermoIgualdade -> TermoIgualdade NOTEQUAL TermoRelacional
Rule 47    TermoIgualdade -> TermoRelacional
Rule 48    TermoRelacional -> TermoRelacional BIGGERTHEN TermoAditivo
Rule 49    TermoRelacional -> TermoRelacional SMALLERTHEN TermoAditivo
Rule 50    TermoRelacional -> TermoRelacional BIGOREQ TermoAditivo
Rule 51    TermoRelacional -> TermoRelacional SMALOREQ TermoAditivo
Rule 52    TermoRelacional -> TermoAditivo
Rule 53    TermoAditivo -> TermoAditivo ADD TermoMultiplicativo
Rule 54    TermoAditivo -> TermoAditivo SUB TermoMultiplicativo
Rule 55    TermoAditivo -> TermoMultiplicativo
Rule 56    TermoMultiplicativo -> TermoMultiplicativo MUL Fator
Rule 57    TermoMultiplicativo -> TermoMultiplicativo DIV Fator
Rule 58    TermoMultiplicativo -> TermoMultiplicativo MOD Fator
Rule 59    TermoMultiplicativo -> Fator
Rule 60    Fator -> ID
Rule 61    Fator -> NUMBER
Rule 62    Fator -> STRING
Rule 63    Fator -> TRUE
Rule 64    Fator -> FALSE
Rule 65    Fator -> LPAREN Expr RPAREN
Rule 66    Fator -> ID LBRACKET Expr RBRACKET
Rule 67    Fator -> ID DOT ID
Rule 68    Fator -> ID LPAREN ID RPAREN
Rule 69    Fator -> CHAR
Rule 70    ListaArgumentos -> Expr ListaArgumentosTail
Rule 71    ListaArgumentos -> empty
Rule 72    ListaArgumentosTail -> COMMA Expr ListaArgumentosTail
Rule 73    ListaArgumentosTail -> empty
Rule 74    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 53
AND                  : 43
ARRAY                : 18
ASSIGN               : 34 35 36 37
BEGIN                : 19
BIGGERTHEN           : 48
BIGOREQ              : 50
BOOLEAN              : 16
CASE                 : 
CHAR                 : 69
CHAR_TYPE            : 15
COLON                : 7
COMMA                : 11 41 72
CONST                : 
DIV                  : 57
DIVIDE               : 
DO                   : 33 34 35
DOT                  : 1 67
DOTDOT               : 18
DOWNTO               : 35
ELSE                 : 24
END                  : 19
EQUAL                : 45
FALSE                : 64
FOR                  : 34 35
FUNCTION             : 
ID                   : 1 8 9 34 35 36 37 60 66 67 67 68 68
IF                   : 23 24
INTEGER              : 13
LBRACKET             : 8 18 37 66
LPAREN               : 28 29 31 32 65 68
MOD                  : 58
MUL                  : 56
NOT                  : 
NOTEQUAL             : 46
NUMBER               : 18 18 61
OF                   : 18
OR                   : 38
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 8 18 37 66
READ                 : 31
READLN               : 32
REAL                 : 14
REPEAT               : 
RPAREN               : 28 29 31 32 65 68
SEMICOLON            : 1 7 20
SMALLERTHEN          : 49
SMALOREQ             : 51
STRING               : 62
STRING_TYPE          : 17
SUB                  : 54
THEN                 : 23 24
TO                   : 34
TRUE                 : 63
UNTIL                : 
VAR                  : 3
WHILE                : 33
WRITE                : 28
WRITELN              : 29 30
error                : 

Nonterminals, with rules where they appear

Atr                  : 26
Bloco                : 1
DeclVar              : 5
Exec                 : 2 27
Expr                 : 8 23 24 33 34 34 35 35 36 37 37 38 40 41 65 66 70 72
Fator                : 56 57 58 59
Instrucao            : 20 21 23 24 24 33 34 35
ListaArgumentos      : 
ListaArgumentosTail  : 70 72
ListaDeclaracaoVars  : 3 5
ListaExpr            : 28 29
ListaExprTail        : 40 41
ListaInstrucao       : 19 20
ListaVariaveis       : 7 31 32
ListaVariaveisTail   : 10 11
Loop                 : 25
Programa             : 0
TermoAditivo         : 48 49 50 51 52 53 54
TermoAnd             : 38 39 43
TermoIgualdade       : 43 44 45 46
TermoMultiplicativo  : 53 54 55 56 57 58
TermoRelacional      : 45 46 47 48 49 50 51
Tipo                 : 7 18
VarSec               : 2
Variavel             : 10 11
empty                : 4 6 12 22 42 71 73

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . PROGRAM ID SEMICOLON Bloco DOT

    PROGRAM         shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> PROGRAM . ID SEMICOLON Bloco DOT

    ID              shift and go to state 3


state 3

    (1) Programa -> PROGRAM ID . SEMICOLON Bloco DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) Programa -> PROGRAM ID SEMICOLON . Bloco DOT
    (2) Bloco -> . VarSec Exec
    (3) VarSec -> . VAR ListaDeclaracaoVars
    (4) VarSec -> . empty
    (74) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 74 (empty -> .)

    Bloco                          shift and go to state 5
    VarSec                         shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) Programa -> PROGRAM ID SEMICOLON Bloco . DOT

    DOT             shift and go to state 9


state 6

    (2) Bloco -> VarSec . Exec
    (19) Exec -> . BEGIN ListaInstrucao END

    BEGIN           shift and go to state 11

    Exec                           shift and go to state 10

state 7

    (3) VarSec -> VAR . ListaDeclaracaoVars
    (5) ListaDeclaracaoVars -> . DeclVar ListaDeclaracaoVars
    (6) ListaDeclaracaoVars -> . empty
    (7) DeclVar -> . ListaVariaveis COLON Tipo SEMICOLON
    (74) empty -> .
    (10) ListaVariaveis -> . Variavel ListaVariaveisTail
    (8) Variavel -> . ID LBRACKET Expr RBRACKET
    (9) Variavel -> . ID

    BEGIN           reduce using rule 74 (empty -> .)
    ID              shift and go to state 17

    ListaDeclaracaoVars            shift and go to state 12
    DeclVar                        shift and go to state 13
    empty                          shift and go to state 14
    ListaVariaveis                 shift and go to state 15
    Variavel                       shift and go to state 16

state 8

    (4) VarSec -> empty .

    BEGIN           reduce using rule 4 (VarSec -> empty .)


state 9

    (1) Programa -> PROGRAM ID SEMICOLON Bloco DOT .

    $end            reduce using rule 1 (Programa -> PROGRAM ID SEMICOLON Bloco DOT .)


state 10

    (2) Bloco -> VarSec Exec .

    DOT             reduce using rule 2 (Bloco -> VarSec Exec .)


state 11

    (19) Exec -> BEGIN . ListaInstrucao END
    (20) ListaInstrucao -> . Instrucao SEMICOLON ListaInstrucao
    (21) ListaInstrucao -> . Instrucao
    (22) ListaInstrucao -> . empty
    (23) Instrucao -> . IF Expr THEN Instrucao
    (24) Instrucao -> . IF Expr THEN Instrucao ELSE Instrucao
    (25) Instrucao -> . Loop
    (26) Instrucao -> . Atr
    (27) Instrucao -> . Exec
    (28) Instrucao -> . WRITE LPAREN ListaExpr RPAREN
    (29) Instrucao -> . WRITELN LPAREN ListaExpr RPAREN
    (30) Instrucao -> . WRITELN
    (31) Instrucao -> . READ LPAREN ListaVariaveis RPAREN
    (32) Instrucao -> . READLN LPAREN ListaVariaveis RPAREN
    (74) empty -> .
    (33) Loop -> . WHILE Expr DO Instrucao
    (34) Loop -> . FOR ID ASSIGN Expr TO Expr DO Instrucao
    (35) Loop -> . FOR ID ASSIGN Expr DOWNTO Expr DO Instrucao
    (36) Atr -> . ID ASSIGN Expr
    (37) Atr -> . ID LBRACKET Expr RBRACKET ASSIGN Expr
    (19) Exec -> . BEGIN ListaInstrucao END

    IF              shift and go to state 21
    WRITE           shift and go to state 25
    WRITELN         shift and go to state 26
    READ            shift and go to state 27
    READLN          shift and go to state 28
    END             reduce using rule 74 (empty -> .)
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    ID              shift and go to state 31
    BEGIN           shift and go to state 11

    ListaInstrucao                 shift and go to state 18
    Instrucao                      shift and go to state 19
    empty                          shift and go to state 20
    Loop                           shift and go to state 22
    Atr                            shift and go to state 23
    Exec                           shift and go to state 24

state 12

    (3) VarSec -> VAR ListaDeclaracaoVars .

    BEGIN           reduce using rule 3 (VarSec -> VAR ListaDeclaracaoVars .)


state 13

    (5) ListaDeclaracaoVars -> DeclVar . ListaDeclaracaoVars
    (5) ListaDeclaracaoVars -> . DeclVar ListaDeclaracaoVars
    (6) ListaDeclaracaoVars -> . empty
    (7) DeclVar -> . ListaVariaveis COLON Tipo SEMICOLON
    (74) empty -> .
    (10) ListaVariaveis -> . Variavel ListaVariaveisTail
    (8) Variavel -> . ID LBRACKET Expr RBRACKET
    (9) Variavel -> . ID

    BEGIN           reduce using rule 74 (empty -> .)
    ID              shift and go to state 17

    DeclVar                        shift and go to state 13
    ListaDeclaracaoVars            shift and go to state 32
    empty                          shift and go to state 14
    ListaVariaveis                 shift and go to state 15
    Variavel                       shift and go to state 16

state 14

    (6) ListaDeclaracaoVars -> empty .

    BEGIN           reduce using rule 6 (ListaDeclaracaoVars -> empty .)


state 15

    (7) DeclVar -> ListaVariaveis . COLON Tipo SEMICOLON

    COLON           shift and go to state 33


state 16

    (10) ListaVariaveis -> Variavel . ListaVariaveisTail
    (11) ListaVariaveisTail -> . COMMA Variavel ListaVariaveisTail
    (12) ListaVariaveisTail -> . empty
    (74) empty -> .

    COMMA           shift and go to state 35
    COLON           reduce using rule 74 (empty -> .)
    RPAREN          reduce using rule 74 (empty -> .)

    ListaVariaveisTail             shift and go to state 34
    empty                          shift and go to state 36

state 17

    (8) Variavel -> ID . LBRACKET Expr RBRACKET
    (9) Variavel -> ID .

    LBRACKET        shift and go to state 37
    COMMA           reduce using rule 9 (Variavel -> ID .)
    COLON           reduce using rule 9 (Variavel -> ID .)
    RPAREN          reduce using rule 9 (Variavel -> ID .)


state 18

    (19) Exec -> BEGIN ListaInstrucao . END

    END             shift and go to state 38


state 19

    (20) ListaInstrucao -> Instrucao . SEMICOLON ListaInstrucao
    (21) ListaInstrucao -> Instrucao .

    SEMICOLON       shift and go to state 39
    END             reduce using rule 21 (ListaInstrucao -> Instrucao .)


state 20

    (22) ListaInstrucao -> empty .

    END             reduce using rule 22 (ListaInstrucao -> empty .)


state 21

    (23) Instrucao -> IF . Expr THEN Instrucao
    (24) Instrucao -> IF . Expr THEN Instrucao ELSE Instrucao
    (38) Expr -> . Expr OR TermoAnd
    (39) Expr -> . TermoAnd
    (43) TermoAnd -> . TermoAnd AND TermoIgualdade
    (44) TermoAnd -> . TermoIgualdade
    (45) TermoIgualdade -> . TermoIgualdade EQUAL TermoRelacional
    (46) TermoIgualdade -> . TermoIgualdade NOTEQUAL TermoRelacional
    (47) TermoIgualdade -> . TermoRelacional
    (48) TermoRelacional -> . TermoRelacional BIGGERTHEN TermoAditivo
    (49) TermoRelacional -> . TermoRelacional SMALLERTHEN TermoAditivo
    (50) TermoRelacional -> . TermoRelacional BIGOREQ TermoAditivo
    (51) TermoRelacional -> . TermoRelacional SMALOREQ TermoAditivo
    (52) TermoRelacional -> . TermoAditivo
    (53) TermoAditivo -> . TermoAditivo ADD TermoMultiplicativo
    (54) TermoAditivo -> . TermoAditivo SUB TermoMultiplicativo
    (55) TermoAditivo -> . TermoMultiplicativo
    (56) TermoMultiplicativo -> . TermoMultiplicativo MUL Fator
    (57) TermoMultiplicativo -> . TermoMultiplicativo DIV Fator
    (58) TermoMultiplicativo -> . TermoMultiplicativo MOD Fator
    (59) TermoMultiplicativo -> . Fator
    (60) Fator -> . ID
    (61) Fator -> . NUMBER
    (62) Fator -> . STRING
    (63) Fator -> . TRUE
    (64) Fator -> . FALSE
    (65) Fator -> . LPAREN Expr RPAREN
    (66) Fator -> . ID LBRACKET Expr RBRACKET
    (67) Fator -> . ID DOT ID
    (68) Fator -> . ID LPAREN ID RPAREN
    (69) Fator -> . CHAR

    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 52
    CHAR            shift and go to state 53

    Expr                           shift and go to state 40
    TermoAnd                       shift and go to state 41
    TermoIgualdade                 shift and go to state 42
    TermoRelacional                shift and go to state 43
    TermoAditivo                   shift and go to state 44
    TermoMultiplicativo            shift and go to state 45
    Fator                          shift and go to state 46

state 22

    (25) Instrucao -> Loop .

    SEMICOLON       reduce using rule 25 (Instrucao -> Loop .)
    END             reduce using rule 25 (Instrucao -> Loop .)
    ELSE            reduce using rule 25 (Instrucao -> Loop .)


state 23

    (26) Instrucao -> Atr .

    SEMICOLON       reduce using rule 26 (Instrucao -> Atr .)
    END             reduce using rule 26 (Instrucao -> Atr .)
    ELSE            reduce using rule 26 (Instrucao -> Atr .)


state 24

    (27) Instrucao -> Exec .

    SEMICOLON       reduce using rule 27 (Instrucao -> Exec .)
    END             reduce using rule 27 (Instrucao -> Exec .)
    ELSE            reduce using rule 27 (Instrucao -> Exec .)


state 25

    (28) Instrucao -> WRITE . LPAREN ListaExpr RPAREN

    LPAREN          shift and go to state 54


state 26

    (29) Instrucao -> WRITELN . LPAREN ListaExpr RPAREN
    (30) Instrucao -> WRITELN .

    LPAREN          shift and go to state 55
    SEMICOLON       reduce using rule 30 (Instrucao -> WRITELN .)
    END             reduce using rule 30 (Instrucao -> WRITELN .)
    ELSE            reduce using rule 30 (Instrucao -> WRITELN .)


state 27

    (31) Instrucao -> READ . LPAREN ListaVariaveis RPAREN

    LPAREN          shift and go to state 56


state 28

    (32) Instrucao -> READLN . LPAREN ListaVariaveis RPAREN

    LPAREN          shift and go to state 57


state 29

    (33) Loop -> WHILE . Expr DO Instrucao
    (38) Expr -> . Expr OR TermoAnd
    (39) Expr -> . TermoAnd
    (43) TermoAnd -> . TermoAnd AND TermoIgualdade
    (44) TermoAnd -> . TermoIgualdade
    (45) TermoIgualdade -> . TermoIgualdade EQUAL TermoRelacional
    (46) TermoIgualdade -> . TermoIgualdade NOTEQUAL TermoRelacional
    (47) TermoIgualdade -> . TermoRelacional
    (48) TermoRelacional -> . TermoRelacional BIGGERTHEN TermoAditivo
    (49) TermoRelacional -> . TermoRelacional SMALLERTHEN TermoAditivo
    (50) TermoRelacional -> . TermoRelacional BIGOREQ TermoAditivo
    (51) TermoRelacional -> . TermoRelacional SMALOREQ TermoAditivo
    (52) TermoRelacional -> . TermoAditivo
    (53) TermoAditivo -> . TermoAditivo ADD TermoMultiplicativo
    (54) TermoAditivo -> . TermoAditivo SUB TermoMultiplicativo
    (55) TermoAditivo -> . TermoMultiplicativo
    (56) TermoMultiplicativo -> . TermoMultiplicativo MUL Fator
    (57) TermoMultiplicativo -> . TermoMultiplicativo DIV Fator
    (58) TermoMultiplicativo -> . TermoMultiplicativo MOD Fator
    (59) TermoMultiplicativo -> . Fator
    (60) Fator -> . ID
    (61) Fator -> . NUMBER
    (62) Fator -> . STRING
    (63) Fator -> . TRUE
    (64) Fator -> . FALSE
    (65) Fator -> . LPAREN Expr RPAREN
    (66) Fator -> . ID LBRACKET Expr RBRACKET
    (67) Fator -> . ID DOT ID
    (68) Fator -> . ID LPAREN ID RPAREN
    (69) Fator -> . CHAR

    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 52
    CHAR            shift and go to state 53

    Expr                           shift and go to state 58
    TermoAnd                       shift and go to state 41
    TermoIgualdade                 shift and go to state 42
    TermoRelacional                shift and go to state 43
    TermoAditivo                   shift and go to state 44
    TermoMultiplicativo            shift and go to state 45
    Fator                          shift and go to state 46

state 30

    (34) Loop -> FOR . ID ASSIGN Expr TO Expr DO Instrucao
    (35) Loop -> FOR . ID ASSIGN Expr DOWNTO Expr DO Instrucao

    ID              shift and go to state 59


state 31

    (36) Atr -> ID . ASSIGN Expr
    (37) Atr -> ID . LBRACKET Expr RBRACKET ASSIGN Expr

    ASSIGN          shift and go to state 60
    LBRACKET        shift and go to state 61


state 32

    (5) ListaDeclaracaoVars -> DeclVar ListaDeclaracaoVars .

    BEGIN           reduce using rule 5 (ListaDeclaracaoVars -> DeclVar ListaDeclaracaoVars .)


state 33

    (7) DeclVar -> ListaVariaveis COLON . Tipo SEMICOLON
    (13) Tipo -> . INTEGER
    (14) Tipo -> . REAL
    (15) Tipo -> . CHAR_TYPE
    (16) Tipo -> . BOOLEAN
    (17) Tipo -> . STRING_TYPE
    (18) Tipo -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF Tipo

    INTEGER         shift and go to state 63
    REAL            shift and go to state 64
    CHAR_TYPE       shift and go to state 65
    BOOLEAN         shift and go to state 66
    STRING_TYPE     shift and go to state 67
    ARRAY           shift and go to state 68

    Tipo                           shift and go to state 62

state 34

    (10) ListaVariaveis -> Variavel ListaVariaveisTail .

    COLON           reduce using rule 10 (ListaVariaveis -> Variavel ListaVariaveisTail .)
    RPAREN          reduce using rule 10 (ListaVariaveis -> Variavel ListaVariaveisTail .)


state 35

    (11) ListaVariaveisTail -> COMMA . Variavel ListaVariaveisTail
    (8) Variavel -> . ID LBRACKET Expr RBRACKET
    (9) Variavel -> . ID

    ID              shift and go to state 17

    Variavel                       shift and go to state 69

state 36

    (12) ListaVariaveisTail -> empty .

    COLON           reduce using rule 12 (ListaVariaveisTail -> empty .)
    RPAREN          reduce using rule 12 (ListaVariaveisTail -> empty .)


state 37

    (8) Variavel -> ID LBRACKET . Expr RBRACKET
    (38) Expr -> . Expr OR TermoAnd
    (39) Expr -> . TermoAnd
    (43) TermoAnd -> . TermoAnd AND TermoIgualdade
    (44) TermoAnd -> . TermoIgualdade
    (45) TermoIgualdade -> . TermoIgualdade EQUAL TermoRelacional
    (46) TermoIgualdade -> . TermoIgualdade NOTEQUAL TermoRelacional
    (47) TermoIgualdade -> . TermoRelacional
    (48) TermoRelacional -> . TermoRelacional BIGGERTHEN TermoAditivo
    (49) TermoRelacional -> . TermoRelacional SMALLERTHEN TermoAditivo
    (50) TermoRelacional -> . TermoRelacional BIGOREQ TermoAditivo
    (51) TermoRelacional -> . TermoRelacional SMALOREQ TermoAditivo
    (52) TermoRelacional -> . TermoAditivo
    (53) TermoAditivo -> . TermoAditivo ADD TermoMultiplicativo
    (54) TermoAditivo -> . TermoAditivo SUB TermoMultiplicativo
    (55) TermoAditivo -> . TermoMultiplicativo
    (56) TermoMultiplicativo -> . TermoMultiplicativo MUL Fator
    (57) TermoMultiplicativo -> . TermoMultiplicativo DIV Fator
    (58) TermoMultiplicativo -> . TermoMultiplicativo MOD Fator
    (59) TermoMultiplicativo -> . Fator
    (60) Fator -> . ID
    (61) Fator -> . NUMBER
    (62) Fator -> . STRING
    (63) Fator -> . TRUE
    (64) Fator -> . FALSE
    (65) Fator -> . LPAREN Expr RPAREN
    (66) Fator -> . ID LBRACKET Expr RBRACKET
    (67) Fator -> . ID DOT ID
    (68) Fator -> . ID LPAREN ID RPAREN
    (69) Fator -> . CHAR

    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 52
    CHAR            shift and go to state 53

    Expr                           shift and go to state 70
    TermoAnd                       shift and go to state 41
    TermoIgualdade                 shift and go to state 42
    TermoRelacional                shift and go to state 43
    TermoAditivo                   shift and go to state 44
    TermoMultiplicativo            shift and go to state 45
    Fator                          shift and go to state 46

state 38

    (19) Exec -> BEGIN ListaInstrucao END .

    DOT             reduce using rule 19 (Exec -> BEGIN ListaInstrucao END .)
    SEMICOLON       reduce using rule 19 (Exec -> BEGIN ListaInstrucao END .)
    END             reduce using rule 19 (Exec -> BEGIN ListaInstrucao END .)
    ELSE            reduce using rule 19 (Exec -> BEGIN ListaInstrucao END .)


state 39

    (20) ListaInstrucao -> Instrucao SEMICOLON . ListaInstrucao
    (20) ListaInstrucao -> . Instrucao SEMICOLON ListaInstrucao
    (21) ListaInstrucao -> . Instrucao
    (22) ListaInstrucao -> . empty
    (23) Instrucao -> . IF Expr THEN Instrucao
    (24) Instrucao -> . IF Expr THEN Instrucao ELSE Instrucao
    (25) Instrucao -> . Loop
    (26) Instrucao -> . Atr
    (27) Instrucao -> . Exec
    (28) Instrucao -> . WRITE LPAREN ListaExpr RPAREN
    (29) Instrucao -> . WRITELN LPAREN ListaExpr RPAREN
    (30) Instrucao -> . WRITELN
    (31) Instrucao -> . READ LPAREN ListaVariaveis RPAREN
    (32) Instrucao -> . READLN LPAREN ListaVariaveis RPAREN
    (74) empty -> .
    (33) Loop -> . WHILE Expr DO Instrucao
    (34) Loop -> . FOR ID ASSIGN Expr TO Expr DO Instrucao
    (35) Loop -> . FOR ID ASSIGN Expr DOWNTO Expr DO Instrucao
    (36) Atr -> . ID ASSIGN Expr
    (37) Atr -> . ID LBRACKET Expr RBRACKET ASSIGN Expr
    (19) Exec -> . BEGIN ListaInstrucao END

    IF              shift and go to state 21
    WRITE           shift and go to state 25
    WRITELN         shift and go to state 26
    READ            shift and go to state 27
    READLN          shift and go to state 28
    END             reduce using rule 74 (empty -> .)
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    ID              shift and go to state 31
    BEGIN           shift and go to state 11

    Instrucao                      shift and go to state 19
    ListaInstrucao                 shift and go to state 71
    empty                          shift and go to state 20
    Loop                           shift and go to state 22
    Atr                            shift and go to state 23
    Exec                           shift and go to state 24

state 40

    (23) Instrucao -> IF Expr . THEN Instrucao
    (24) Instrucao -> IF Expr . THEN Instrucao ELSE Instrucao
    (38) Expr -> Expr . OR TermoAnd

    THEN            shift and go to state 72
    OR              shift and go to state 73


state 41

    (39) Expr -> TermoAnd .
    (43) TermoAnd -> TermoAnd . AND TermoIgualdade

    THEN            reduce using rule 39 (Expr -> TermoAnd .)
    OR              reduce using rule 39 (Expr -> TermoAnd .)
    DO              reduce using rule 39 (Expr -> TermoAnd .)
    RBRACKET        reduce using rule 39 (Expr -> TermoAnd .)
    RPAREN          reduce using rule 39 (Expr -> TermoAnd .)
    COMMA           reduce using rule 39 (Expr -> TermoAnd .)
    SEMICOLON       reduce using rule 39 (Expr -> TermoAnd .)
    END             reduce using rule 39 (Expr -> TermoAnd .)
    ELSE            reduce using rule 39 (Expr -> TermoAnd .)
    TO              reduce using rule 39 (Expr -> TermoAnd .)
    DOWNTO          reduce using rule 39 (Expr -> TermoAnd .)
    AND             shift and go to state 74


state 42

    (44) TermoAnd -> TermoIgualdade .
    (45) TermoIgualdade -> TermoIgualdade . EQUAL TermoRelacional
    (46) TermoIgualdade -> TermoIgualdade . NOTEQUAL TermoRelacional

    AND             reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    THEN            reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    OR              reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    DO              reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    RBRACKET        reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    RPAREN          reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    COMMA           reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    SEMICOLON       reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    END             reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    ELSE            reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    TO              reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    DOWNTO          reduce using rule 44 (TermoAnd -> TermoIgualdade .)
    EQUAL           shift and go to state 75
    NOTEQUAL        shift and go to state 76


state 43

    (47) TermoIgualdade -> TermoRelacional .
    (48) TermoRelacional -> TermoRelacional . BIGGERTHEN TermoAditivo
    (49) TermoRelacional -> TermoRelacional . SMALLERTHEN TermoAditivo
    (50) TermoRelacional -> TermoRelacional . BIGOREQ TermoAditivo
    (51) TermoRelacional -> TermoRelacional . SMALOREQ TermoAditivo

    EQUAL           reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    NOTEQUAL        reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    AND             reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    THEN            reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    OR              reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    DO              reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    RBRACKET        reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    RPAREN          reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    COMMA           reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    SEMICOLON       reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    END             reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    ELSE            reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    TO              reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    DOWNTO          reduce using rule 47 (TermoIgualdade -> TermoRelacional .)
    BIGGERTHEN      shift and go to state 77
    SMALLERTHEN     shift and go to state 78
    BIGOREQ         shift and go to state 79
    SMALOREQ        shift and go to state 80


state 44

    (52) TermoRelacional -> TermoAditivo .
    (53) TermoAditivo -> TermoAditivo . ADD TermoMultiplicativo
    (54) TermoAditivo -> TermoAditivo . SUB TermoMultiplicativo

    BIGGERTHEN      reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    SMALLERTHEN     reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    BIGOREQ         reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    SMALOREQ        reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    EQUAL           reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    NOTEQUAL        reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    AND             reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    THEN            reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    OR              reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    DO              reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    RBRACKET        reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    RPAREN          reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    COMMA           reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    SEMICOLON       reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    END             reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    ELSE            reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    TO              reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    DOWNTO          reduce using rule 52 (TermoRelacional -> TermoAditivo .)
    ADD             shift and go to state 81
    SUB             shift and go to state 82


state 45

    (55) TermoAditivo -> TermoMultiplicativo .
    (56) TermoMultiplicativo -> TermoMultiplicativo . MUL Fator
    (57) TermoMultiplicativo -> TermoMultiplicativo . DIV Fator
    (58) TermoMultiplicativo -> TermoMultiplicativo . MOD Fator
